# opp2-library

./: .gitignore  Doxyfile  Doxyfile.bak  LAYOUT.md  LICENSE  README.md  library.json  platformio.ini
.claude/: settings.local.json
.github/workflows/: test.yml
examples/: platformio.ini
examples/apparatus_basic/: apparatus_basic.ino
examples/esp32/subscriber_basic/: subscriber_basic.ino
examples/linux/: CMakeLists.txt
examples/linux/apparatus_basic/: CMakeLists.txt  main.cpp
examples/linux/subscriber_basic/: CMakeLists.txt  main.cpp
src/: opp2.h  opp2_deserialize.h  opp2_dispatcher.h  opp2_serialize.h  opp2_time.h  opp2_topic.h  opp2_types.h
test/: test_main.cpp
test/test_deserialize/: test_deserialize.cpp
test/test_dispatcher/: test_dispatcher.cpp
test/test_serialize/: test_serialize.cpp
test/test_time/: test_time.cpp
test/test_topic/: test_topic.cpp
